--- a/Kalkulator/index.html
+++ b/Kalkulator/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simple Calculator</title>
     <link rel="stylesheet" href="style.css">
     <script src="operations.js"></script>
 </head>
 <body>
+    <div class="up">Simple Calculator</div>
+    <div class="caption">by 535230080 - Georgia Sugisandhea</div>
     <div class="calc">
         <div class="top">First Number<input type="number" id="first"></div>
         <div class="bottom">Second Number<input type="number" id="second"></div>
