--- a/KonversiNilai/index.html
+++ b/KonversiNilai/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>535230080_Konversi Nilai</title>
+    <title>Grade Converter</title>
     <link rel="stylesheet" href="style.css">
     <script>
         function converse(num){
@@ -27,6 +27,8 @@
     </script>
 </head>
 <body>
+    <div class="up">Grade Converter</div>
+    <div class="caption">by 535230080 - Georgia Sugisandhea</div>
     <div class="mid">
         <div class="up">
             <input type="number" id="num" placeholder="Nilai Angka">
